Lesson 7 Assignment Final

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
 
     <figure>
-    <a href="./index.html"><img src="/Users/noahtesema/Desktop/HTML100/lesson-7-assignment/images/archery-academy-logo.jpeg" alt="logo" /></a>
+    <a href="./index.html"><img src="archery-academy-logo.jpeg" alt="logo" /></a>
     <figcaption></figcaption>
     </figure>
 
@@ -41,7 +41,7 @@
           Sundy - Saturday: 10:00 - 5:00pm </p>
 
     <figure>
-      <img src="/Users/noahtesema/Desktop/HTML100/lesson-7-assignment/images/archery.jpeg" alt="man shooting a bow and arrow"/>
+      <img src="archery.jpeg" alt="man shooting a bow and arrow"/>
       <figcaption> A picture of a man shooting a bow and arrow </figcaption>
     </figure>
   </aside>
@@ -52,10 +52,10 @@
     <li><a href="./classes.html"><h2> Intermediate </h2> </a></li>
     <li><a href="./classes.html"><h2> Advanced </h2> </a></li>
   </ul>
-
+  
   <footer>
     <figure>
-    <img src="/lesson-7-assignment/images/archery-academy-logo.jpeg" alt="" />
+    <img src="archery-academy-logo.jpeg" alt="" />
     <figcaption></figcaption>
     </figure>
 
